# java-functional-lsp

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml  test_analyzers.py
.claude-plugin/: plugin.json
.githooks/: pre-commit  pre-push
.github/: SECURITY.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: publish.yml  release-drafter.yml  test.yml  update-homebrew.yml  vscode-ext.yml
commands/: lint-java.md
editors/intellij/: README.md  lsp4ij-template.json
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
hooks/: hooks.json  java_linter_reminder.py
references/: functional-design.md  lombok.md  spring.md  vavr.md
scripts/: ensure-lsp.sh  generate-formula.py
src/java_functional_lsp/: __init__.py  __main__.py  cli.py  proxy.py  server.py
src/java_functional_lsp/analyzers/: __init__.py  base.py  exception_checker.py  mutation_checker.py  null_checker.py  spring_checker.py
tests/: conftest.py  test_base.py  test_cli.py  test_config.py  test_e2e.py  test_exception_checker.py  test_mutation_checker.py  test_null_checker.py  test_proxy.py  test_spring_checker.py  test_suppress.py
