[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "java-functional-lsp"
version = "0.1.0"
description = "Java LSP server enforcing functional programming best practices — null safety, immutability, no exceptions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aviad S." },
]
keywords = ["java", "lsp", "functional-programming", "linter", "vavr", "lombok"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pygls>=1.3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.0",
]

[project.scripts]
java-functional-lsp = "java_functional_lsp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
