[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "java-functional-lsp"
version = "0.3.0"
description = "Java LSP server enforcing functional programming best practices — null safety, immutability, no exceptions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aviad S." },
]
keywords = ["java", "lsp", "functional-programming", "linter", "vavr", "lombok", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pygls>=1.3.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-java>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/aviadshiber/java-functional-lsp"
Repository = "https://github.com/aviadshiber/java-functional-lsp"
"Bug Tracker" = "https://github.com/aviadshiber/java-functional-lsp/issues"
Changelog = "https://github.com/aviadshiber/java-functional-lsp/releases"

[project.scripts]
java-functional-lsp = "java_functional_lsp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/java_functional_lsp"]

[tool.uv]
default-groups = ["dev"]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=java_functional_lsp --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "__pypackages__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "PL", "RUF", "B", "C4", "T20", "PT"]
ignore = ["PLR0913", "PLC0415", "PLW0603", "PLW0602"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/test_*.py" = ["PLR2004"]
"**/cli.py" = ["T20", "PLR0912", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
